--- a/vignettes/forecasting.Rmd
+++ b/vignettes/forecasting.Rmd
@@ -124,8 +124,9 @@ y_sig <- apply(y_train, 2, sd) # sigma vector
 y_lam <- .2 # lambda
 y_delta <- rep(.2, m) # delta vector (0 vector since RV stationary)
 eps <- 1e-04 # very small number
+y_bvar <- set_bvar(y_sig, y_lam, y_delta, eps)
 # fit---------------------------------------
-model_bvar <- bvar_minnesota(y_train, 5, y_sig, y_lam, y_delta, eps)
+model_bvar <- bvar_minnesota(y_train, 5, y_bvar)
 ```
 
 ## BVHAR
@@ -133,9 +134,9 @@ model_bvar <- bvar_minnesota(y_train, 5, y_sig, y_lam, y_delta, eps)
 VAR-type Minnesota
 
 ```{r}
-model_bvhar_v1 <- bvhar_minnesota(
-  y_train, mn_type = "VAR", y_sig, y_lam, y_delta
-)
+y_bvhar <- set_bvhar(y_sig, y_lam, y_delta, eps)
+# fit---------------------------------------
+model_bvhar_v1 <- bvhar_minnesota(y_train, y_bvhar)
 ```
 
 HAR-type Minnesota
@@ -145,17 +146,17 @@ HAR-type Minnesota
 y_day <- rep(.2, m)
 y_week <- rep(.1, m)
 y_month <- rep(.1, m)
-# fit--------------------------------------
-model_bvhar_v2 <- bvhar_minnesota(
-  y_train, 
-  mn_type = "VHAR", 
-  sigma = y_sig, 
-  lambda = y_lam, 
-  daily = y_day, 
-  weekly = y_week, 
-  monthly = y_month, 
-  eps = eps
+# spec-------------------------------------
+y_bvhar_wt <- set_weight_bvhar(
+  y_sig,
+  y_lam,
+  eps,
+  y_day,
+  y_week,
+  y_month
 )
+# fit--------------------------------------
+model_bvhar_v2 <- bvhar_minnesota(y_train, y_bvhar_wt)
 ```
 
 # Forecasting
@@ -244,7 +245,7 @@ MSE:
 ```{r}
 autoplot(pred_var, x_cut = 1400, ci_alpha = .7) +
   autolayer(pred_vhar, ci_alpha = .5) +
-  autolayer(pred_bvar, ci_alpha = .4) +
+  # autolayer(pred_bvar, ci_alpha = .4) +
   autolayer(pred_bvhar_v1, ci_alpha = .2) +
   autolayer(pred_bvhar_v2, ci_alpha = .1)
 ```
