add loglik method for every class and add details in pkg document

--- a/vignettes/bvhar.Rmd
+++ b/vignettes/bvhar.Rmd
@@ -344,7 +344,7 @@ This is the default prior setting.
 
 
 ```{r}
-(fit_bvhar <- bvhar_minnesota(etf_train, bvhar_spec_v1))
+(fit_bvhar_v1 <- bvhar_minnesota(etf_train, bvhar_spec_v1))
 ```
 
 ### HAR-type Minnesota
@@ -378,10 +378,10 @@ With the type `"VHAR"`, use `daily`, `weekly`, and `monthly` option.
 `delta` option does not work.
 
 ```{r}
-fit_bvhar_other <- bvhar_minnesota(
+fit_bvhar_v2 <- bvhar_minnesota(
   etf_train, 
   bvhar_spec_v2
 )
-fit_bvhar_other
+fit_bvhar_v2
 ```
 
