--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ options(digits = 3)
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions)
-[![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/branch/master/graph/badge.svg)](https://codecov.io/gh/ygeunkim/bvhar?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/branch/master/graph/badge.svg?token=umidjitjiK)](https://codecov.io/gh/ygeunkim/bvhar?branch=master)
 <!-- badges: end -->
 
 ## Overview
