--- a/README.Rmd
+++ b/README.Rmd
@@ -57,11 +57,11 @@ Repeatedly, `bvhar` is a research tool to analyze multivariate time series model
 
 | Model | function | S3 |  
 |:-----:|:--------:|:--:|  
-| VAR | `var_lm` | `varlse` |  
-| VHAR | `vhar_lm` | `vharlse` |  
-| BVAR | `bvar_minnesota` | `bvarmn` |  
-| BVAR | `bvar_flat` | `bvarflat` |  
-| BVHAR | `bvhar_minnesota` | `bvharmn` |  
+| VAR | `var_lm()` | `varlse` |  
+| VHAR | `vhar_lm()` | `vharlse` |  
+| BVAR | `bvar_minnesota()` | `bvarmn` |  
+| BVAR | `bvar_flat()` | `bvarflat` |  
+| BVHAR | `bvhar_minnesota()` | `bvharmn` |  
 
 As the other analyzer tools uses S3 such as `lm`, this package use methods `coef`, `predict`, etc.
 This readme document shows forecasting procedure briefly.
@@ -134,7 +134,7 @@ forecast_bvar <- predict(mod_bvar, h)
 
 ### BVHAR
 
-VAR-type Minnesota prior:
+BVHAR-S:
 
 ```{r specbvhars}
 (bvhar_spec_v1 <- set_bvhar(sig, lam, delta, eps))
@@ -151,7 +151,7 @@ forecast_bvhar_v1 <- predict(mod_bvhar_v1, h)
 (msebvhar_v1 <- mse(forecast_bvhar_v1, etf_te))
 ```
 
-VHAR-type Minnesota prior:
+BVHAR-L:
 
 ```{r specbvharl}
 day <- rep(.1, ncol(etf_vix))
@@ -164,6 +164,8 @@ month <- rep(.1, ncol(etf_vix))
 ```{r fitbvharl}
 mod_bvhar_v2 <- bvhar_minnesota(y = etf_tr, bayes_spec = bvhar_spec_v2)
 ```
+
+MSE:
 
 ```{r predbvharl}
 forecast_bvhar_v2 <- predict(mod_bvhar_v2, h)
