--- a/vignettes/sparse-bvhar.Rmd
+++ b/vignettes/sparse-bvhar.Rmd
@@ -127,7 +127,7 @@ If you want to assign individually, you can use vector.
 On the other hand, you can use upper triangular matrix for `chol_spike`, `chol_slab`, and `chol_mixture`.
 
 ```{r paramset}
-ssvs_spec <- set_ssvs(
+(ssvs_spec <- set_ssvs(
   coef_spike = .1,
   coef_slab = 5,
   coef_mixture = .5,
@@ -137,7 +137,7 @@ ssvs_spec <- set_ssvs(
   chol_spike = .1,
   chol_slab = 5,
   chol_mixture = .5
-)
+))
 ```
 
 Before starting MCMC, set initial values.
@@ -155,12 +155,12 @@ Before starting MCMC, set initial values.
 init_omega <- matrix(1L, nrow = 6L, ncol = 6L)
 init_omega[lower.tri(init_omega, diag = TRUE)] <- 0L
 # initial values specification-----------------
-init_spec <- init_ssvs(
+(init_spec <- init_ssvs(
   init_coef = matrix(0L, nrow = 7L, ncol = 6L),
   init_coef_dummy = matrix(1L, nrow = 6L, ncol = 6L),
   init_chol = matrix(0L, nrow = 6L, ncol = 6L),
   init_chol_dummy = init_omega
-)
+))
 ```
 
 ### Gibbs sampling
@@ -173,7 +173,8 @@ fit <- bvar_ssvs(
   num_burn = 20,
   bayes_spec = ssvs_spec,
   init_spec = init_spec,
-  include_mean = TRUE
+  include_mean = TRUE,
+  chain = 1
 )
 ```
 
