move bayesplot from imports to suggests

--- a/vignettes/sparse-bvhar.Rmd
+++ b/vignettes/sparse-bvhar.Rmd
@@ -30,6 +30,11 @@ set.seed(1)
 library(bvhar)
 ```
 
+```{r otherpkg}
+library(bayesplot)
+```
+
+
 # Stochastic Search Variable Selection (SSVS)
 
 <!-- For $(\bbA, \Sigma)$ -->
